
2012-02-23  Cedric Bail

	* Move to Evas buffer engine for Ecore_Evas SDL software backend.

2012-02-23  Leif Middelschulte (T_UNIX)

        * Add ecore_x_randr_window_crtcs_get to get the crtcs that display a
		window.
        * Deprecate ecore_x_randr_current_output_get. Use
		ecore_x_randr_window_crtcs_get instead.

2012-02-24  Doyun Kang

	* Add indicator controls to ecore_x

2012-02-26 Carsten Haitzler (The Rasterman)

        * Fix ecore_file_download to not limit downloads to 30sec.

2012-02-28 Carsten Haitzler (The Rasterman)

        * Add ecore_x_netwm_icons_set()
        * Add ecore_evas_window_group_set() ecore_evas_window_group_get()
          ecore_evas_aspect_set() ecore_evas_aspect_get()
          ecore_evas_urgent_set() ecore_evas_urgent_get()
          ecore_evas_modal_set() ecore_evas_modal_get()
          ecore_evas_demand_attention_set()
          ecore_evas_demand_attention_get()
          ecore_evas_focus_skip_set() ecore_evas_focus_skip_get()
          ecore_evas_callback_state_change_set()

2012-02-28 Christopher Michael (devilhorns)

        * Refactor Ecore_Wayland code to improve running EFL
          applications as Wayland Clients.
        * Refactor Ecore_Evas Wayland code to match changes in 
          Ecore_Wayland

2012-02-29  Jihoon Kim (jihoon)

        * Add ecore_imf_context_input_panel_caps_lock_mode_set/get to set the caps lock mode on the input panel

2012-03-07  ChunEon Park (Hermet)

        * Add ecore_x_illume_clipboard_state_set()
              ecore_x_illume_clipboard_state_get()
              ecore_x_illume_clipboard_geometry_set()
              ecore_x_illume_clipboard_geometry_get()

2012-03-07  Carsten Haitzler (The Rasterman)

        * Add atoms and api for rotation and indicator transparency in
          ecore_x/ecore_evas

2012-03-07  Mike Blumenkrantz (discomfitor/zmike)

        * Add ecore_con_url_status_code_get() to check return code at any time